# fasttrack

./: .env.example  .gitignore  Dockerfile  PROMPT.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 058c3956fb77_initial_schema.py
src/fasttrack/: config.py  database.py  main.py
src/fasttrack/auth/: blocklist.py  dependencies.py  jwt.py
src/fasttrack/middleware/: cors.py  ratelimit.py
src/fasttrack/models/: __init__.py  comment.py  project.py  task.py  user.py
src/fasttrack/routers/: auth.py  comments.py  projects.py  tasks.py  users.py
src/fasttrack/schemas/: __init__.py  comment.py  pagination.py  project.py  task.py  user.py
src/fasttrack/tasks/: background.py
src/fasttrack/utils/: pagination.py
src/fasttrack/websocket/: handler.py  manager.py  notifications.py
tests/: conftest.py  test_auth.py  test_comments.py  test_pagination.py  test_projects.py  test_ratelimit.py  test_tasks.py  test_users.py  test_websocket.py
